--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
-<html>
-    <head>
-            <title>Aula 3</title>
-            <link rel="stylesheet" href="style.css">
-    </head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario aula 4</title>
+</head>
+<body>
+    <center>
+        <h1>Meu Primeiro Formulário</h1>
+        <p>Nome: <input type="text" name="nome" id="inome" placeholder="Digite seu nome"></p>
+        <br>
+        <p>Sobrenome: <input type= "text" name="sobrenome" id="isobrenome" placeholder="Digite seu sobrenome"></p> 
+        <p> <input type="submit" value="Enviar"></p>
+
+    <br><br>
+    <h1>Formulário de validação</h1>
+    <fieldset>
+        <legend>Dados Pessoais</legend>
+        <form action="main.js" method="get">
+            <p>     <label for="inome">Nome: </label>
+            <input type="text" name="nome" id="inome" placeholder="Digite seu nome" minlength="6" maxlength="40" required name="nome"></p>
+            <p>     <label for="isobrenome">Sobrenome: </label>
+            <input type="text" name="Sobrenome" id="isobrenome" placeholder="Digite seu sobrenome" minlength="6" maxlength="40" required name="sobrenome"></p>
+            <p>     <label for= "iemail">Email: </label>
+            <input type="text" name="Email" id="iEmail" placeholder="Digite seu Email" required name="email"></p>
+            <p>     <label for="icidade">Cidade: </label>  
+            <input type="text" name="cidade" id="icidade" placeholder="Digite sua cidade" required name="cidade"></p>     
+            <p>     <label for="idata">Data: </label>
+            <input type="date" name="date" id="date"></p>
+            <p> <input type="submit" value="Enviar"></p>
+            
+            
+            </form>
+    </fieldset>
+    <br><br>
+    </center>
+</body>
 </html>
-    <body>
-        <div>
-        <center>
-            <ul class="menu">
-                <li Class="Links"><a href="#imagens">IMAGENS</a></li>
-                <li Class="Links"><a href="#videos">VÍDEOS</a></li>
-                <li Class="Links"><a href="#sons">SONS</a></li>
-                <a href="sobre.html" target="_blank" class="links">SOBRE O SITE</a>
-            </ul>
-        </center>
-        </div>
-    </body>
-
-
-
